[metadata]
name = purestorage_flocker_driver
author = Pure Storage
author-email = patrick.east@purestorage.com
summary = Pure Storage Backend Plugin for ClusterHQ/Flocker
description-file = README.md
home-page = https://github.com/PureStorage-OpenConnect/purestorage-flocker-driver
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Flocker
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
keywords =
    backend
    plugin
    flocker
    docker
    python

[files]
packages =
    purestorage_flasharray_flocker_driver
